# ontology

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURE_REVIEW.md  Makefile  README.md  README_MAKEFILE.md  TESTING.md  TEST_SUMMARY.md  TODO_ROADMAP.md  agent_chat.txt  docker-compose.yml  generated_ontology.json
.github/workflows/: README.md  rust.yml
config/: example_ontology.yaml
docs/: application-compatibility.md  application-verification.md  architecture.md  feature-review.md  palantir-features.md  palantir-parity.md  palantir-quick-start.md  palantir-roadmap.md  ui-application-guide.md  what-works.md
examples/census/: .env.example  COMPREHENSIVE_DATA_SUMMARY.md  ENHANCED_FEATURES.md  IMPLEMENTATION_STATUS.md  MISSING_FEATURES.md  QUICK_START.md  README.md  SUMMARY.md  TESTING.md  TEST_RESULTS.md  VISUALIZATION_FEATURES.md
examples/census/config/: census_ontology.yaml
examples/census/scripts/: README.md  generate_comprehensive_data.py  ingest_census_data.py  ingest_geography.py  ingest_ipums_data.py  load_data_to_server.py  load_sample_data.py  simple_graphql_server.rs  simple_map_view.py  test_frontend.sh  test_ontology_loading.py  verify_setup.py
ontology-definitions/: core.ttl  domain_aircraft.ttl  sidecar.yaml
python-pipeline/: pyproject.toml
python-pipeline/analytics/: __init__.py  columnar.py
python-pipeline/hydration/: __init__.py  phonograph.py  schema_mapper.py
python-pipeline/hydration/adapters/: __init__.py  base.py  csv_adapter.py  sql_adapter.py
python-pipeline/models/: __init__.py  datarobot_connector.py  model_adapter.py  model_service.py  pytorch_adapter.py  sagemaker_connector.py  sklearn_adapter.py  tensorflow_adapter.py
rust-core/graphql-api/: Cargo.toml
rust-core/graphql-api/src/: admin.rs  lib.rs  model_resolvers.rs  resolvers.rs  schema.rs
rust-core/graphql-api/tests/: integration_test.rs  resolvers_test.rs
rust-core/indexing/: Cargo.toml
rust-core/indexing/src/: data_quality.rs  hydration.rs  lib.rs  lineage.rs  store.rs  sync.rs  usage_tracking.rs
rust-core/indexing/tests/: integration_test.rs  store_test.rs  unit_test.rs
rust-core/ontology-compiler/: Cargo.toml
rust-core/ontology-compiler/src/: args.rs  compiler.rs  main.rs
rust-core/ontology-compiler/tests/: integration_test.rs
rust-core/ontology-engine/: Cargo.toml
rust-core/ontology-engine/examples/: test_census_ontology.rs
rust-core/ontology-engine/src/: action.rs  action_executor.rs  computed_properties.rs  crosswalk.rs  dynamic.rs  function.rs  interface.rs  lib.rs  link.rs  meta_model.rs  model_executor.rs  model_objectives.rs  property.rs  property_groups.rs  reference.rs  validation.rs
rust-core/ontology-engine/tests/: action_executor_test.rs  crosswalk_test.rs  geospatial_test.rs  integration_test.rs
rust-core/security/: Cargo.toml
rust-core/security/src/: lib.rs  ols.rs  sharing.rs
rust-core/versioning/: Cargo.toml
rust-core/versioning/src/: event_log.rs  lib.rs  time_query.rs
rust-core/writeback/: Cargo.toml
rust-core/writeback/src/: lib.rs  merge.rs  queue.rs
scripts/: create-app.sh  test_new_features.rs
ui-framework/: APPLICATIONS.md  APPLICATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  package-lock.json  package.json
ui-framework/apps/census-example/: index.html  package.json  tsconfig.json  vite.config.ts
ui-framework/apps/census-example/src/: App.tsx  main.tsx
ui-framework/apps/census-example/src/components/: DataSourceManager.tsx  LoadVisualizationButton.tsx  VisualizationManager.tsx
ui-framework/apps/census-example/src/pages/: CohortBuilder.tsx  CrosswalkView.tsx  EnhancedMap.tsx  EnhancedPersonSearch.tsx  PUMSAnalysis.tsx  TractMap.tsx
ui-framework/apps/dynamic-scheduling/: README.md  index.html  package.json
ui-framework/apps/dynamic-scheduling/src/: App.tsx
ui-framework/apps/dynamic-scheduling/src/pages/: Browse.tsx  Home.tsx
ui-framework/apps/financial-portfolio/: README.md  index.html  package.json
ui-framework/apps/financial-portfolio/src/: App.tsx
ui-framework/apps/financial-portfolio/src/pages/: AssetSearch.tsx  Home.tsx  PortfolioBrowser.tsx  Transactions.tsx
ui-framework/apps/foundry-rules/: README.md  index.html  package.json
ui-framework/apps/foundry-rules/src/: App.tsx  main.tsx
ui-framework/apps/foundry-rules/src/pages/: Home.tsx
ui-framework/apps/function-executor/: index.html  package.json
ui-framework/apps/function-executor/src/: App.tsx
ui-framework/apps/function-executor/src/pages/: Home.tsx
ui-framework/apps/interface-explorer/: index.html  package.json  vite.config.ts
ui-framework/apps/interface-explorer/src/: App.tsx
ui-framework/apps/interface-explorer/src/pages/: Home.tsx
ui-framework/apps/machinery/: README.md  index.html  package.json
ui-framework/apps/machinery/src/: App.tsx
ui-framework/apps/machinery/src/pages/: Home.tsx
ui-framework/apps/map-app/: README.md  package.json
ui-framework/apps/map-app/src/: App.tsx
ui-framework/apps/map-app/src/pages/: Home.tsx  MapView.tsx
ui-framework/apps/model-manager/: index.html  package.json
ui-framework/apps/model-manager/src/: App.tsx
ui-framework/apps/model-manager/src/components/: ModelBinding.tsx  ModelDetail.tsx  ModelList.tsx
ui-framework/apps/object-explorer/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
ui-framework/apps/object-explorer/src/: App.tsx
ui-framework/apps/object-views/: README.md  index.html  package.json
ui-framework/apps/object-views/src/: App.tsx
ui-framework/apps/ontology-manager/: README.md  index.html  package.json
ui-framework/apps/ontology-manager/src/: App.tsx
ui-framework/apps/ontology-viewer/: index.html  package.json  tailwind.config.js  vite.config.ts
ui-framework/apps/ontology-viewer/src/: App.tsx
ui-framework/apps/vertex/: README.md  package.json  tsconfig.json  vite.config.ts
ui-framework/apps/vertex/src/: App.tsx
ui-framework/apps/vertex/src/pages/: Home.tsx  (+1 more)
ui-framework/templates/app-template/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
ui-framework/templates/app-template/src/: App.tsx  main.tsx
(+21 files in other folders)
