[project]
name = "ontology-pipeline"
version = "0.1.0"
description = "Python hydration pipeline for ontology framework"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "kafka-python>=2.0.0",
    "confluent-kafka>=2.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

