[package]
name = "graphql-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
ontology-engine = { path = "../ontology-engine" }
indexing = { path = "../indexing" }
security = { path = "../security" }
versioning = { path = "../versioning" }
writeback = { path = "../writeback" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-graphql = "5.0"
async-graphql-axum = "5.0"
axum = "0.7"
lazy_static = "1.4"

