[package]
name = "indexing"
version.workspace = true
edition.workspace = true

[dependencies]
ontology-engine = { path = "../ontology-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
elasticsearch = { version = "8.19.0-alpha.1" }
url = "2.5"
dgraph-tonic = "0.11"



