[package]
name = "ontology-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
geojson = "0.24"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }

[[example]]
name = "test_census_ontology"
path = "examples/test_census_ontology.rs"

[dev-dependencies]
# Add test dependencies if needed

