[package]
name = "versioning"
version.workspace = true
edition.workspace = true

[dependencies]
ontology-engine = { path = "../ontology-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }




