[package]
name = "writeback"
version.workspace = true
edition.workspace = true

[dependencies]
ontology-engine = { path = "../ontology-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }


[lints]
workspace = true
